[gd_scene load_steps=18 format=2]

[ext_resource path="res://Pest.gd" type="Script" id=1]
[ext_resource path="res://sprites/MOSQUITO/00_MOSQUITO_010000.png" type="Texture" id=2]
[ext_resource path="res://sprites/MOSQUITO/00_MOSQUITO_010001.png" type="Texture" id=3]
[ext_resource path="res://sprites/MOSQUITO/00_MOSQUITO_010002.png" type="Texture" id=4]
[ext_resource path="res://sprites/MOSQUITO/00_MOSQUITO_010003.png" type="Texture" id=5]
[ext_resource path="res://sprites/MOSQUITO/00_MOSQUITO_010004.png" type="Texture" id=6]
[ext_resource path="res://sprites/MOSQUITO/00_MOSQUITO_010005.png" type="Texture" id=7]
[ext_resource path="res://sprites/MOSQUITO/00_MOSQUITO_010006.png" type="Texture" id=8]
[ext_resource path="res://sprites/MOSQUITO/00_MOSQUITO_010007.png" type="Texture" id=9]
[ext_resource path="res://sprites/MOSQUITO/00_MOSQUITO_010008.png" type="Texture" id=10]
[ext_resource path="res://sprites/MOSQUITO/00_MOSQUITO_010009.png" type="Texture" id=11]
[ext_resource path="res://sprites/MOSQUITO/00_MOSQUITO_010010.png" type="Texture" id=12]
[ext_resource path="res://sprites/MOSQUITO/00_MOSQUITO_010011.png" type="Texture" id=13]
[ext_resource path="res://sprites/SPLAT.png" type="Texture" id=14]
[ext_resource path="res://sounds/mosquito1.wav" type="AudioStream" id=15]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "mosquito",
"speed": 20.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "squish",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 26.1966, 72.5875 )

[node name="Pest" type="KinematicBody2D"]
input_pickable = true
collision_mask = 0
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -136.361, -106.492 )
frames = SubResource( 1 )
animation = "mosquito"
frame = 7
playing = true
centered = false
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2.59735, 5.19473 )
scale = Vector2( 3.16, 1 )
shape = SubResource( 2 )

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="WonTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="bzz" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )

[connection signal="input_event" from="." to="." method="_on_Pest_input_event"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
